Implemented Redis caching for user and profile APIs